--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>At work timer</title>
     <meta name="description" content="Monitor time spend at work.">
 
-    <link rel="icon" href="/images/favicon.ico">
+    <link rel="icon" href="/images/favicon.png">
 
     <!-- See https://goo.gl/OOhYW5 -->
     <link rel="manifest" href="/manifest.json">
@@ -79,13 +79,13 @@
       })();
 
       // Load pre-caching Service Worker (Generates error on non HTTPS connections)
-      /*
+
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
           navigator.serviceWorker.register('/service-worker.js');
         });
       }
-      */
+
     </script>
 
     <!-- Loading the App SHELL -->
